Adding managers, Planners and overall structure
VLCPlayer (buggy base)
Google Calendar API
Config parser
Better log system
.gitignore upgraded
readable main.py
README done
Loading system of Program Loader

--- a/config.conf
+++ b/config.conf
@@ -5,14 +5,20 @@
 
 # General settings
 
-PlanningSystem = Google_calendar # The only one actively usable
-EmissionsPath = /programs # The program folder. Read the README ! Can be absolute or relative.
-DirectSystem = None # Nothing exist yet ahhahh
-StreamingService = VLC # FFMPEG not yet implemented 
-OnTrouble = None # In space, nobody can hear you scream.
+# The only one actively usable
+PlanningSystem = GoogleCalendar
+# For now there is only one program loader. 
+ProgramLoader = classic
+# VLC is very buggy and not fully implemented.
+Player = Pyglet
+# In space, nobody can hear you scream.
 # In the future a mail would be send if you got trouble / a discord bot message. Not in the near future sorry lol
+OnTrouble = None
 
-
+[ProgramLoader]
+# path to the folder containing all the programs
+# the "." represent the active direcotry (here, the github main directory)
+ProgramsFolder = ./programs
 
 [GoogleCalendar]
 
@@ -22,22 +28,28 @@ ReloadAccount = false
 BufferSize = 10
 ShowOnEmpty = None
 
+# the name of the calendar to get
+CalendarName = TV
 # This is the client secret (the TwitchTV application)
 # Change only if you want to make your own google API application (NOT RECOMMENDED).
-Client_secret_file = core/calendar/client_secret.json
+Client_secret_file = core/planning/client_secret.json
 # The pikle file (to not ask for check everytime)
-Client_flow_pickle_file = core/calendar/google_flow.pickle
+Client_flow_pickle_file = core/planning/google_flow.pickle
 
 
 [VLC]
-
-# If you choose the VLC Streaming service
-
-HideVLC = false
+# If you choose the VLC Streaming service (the only one working) but a big buggy
+Hide = false
 
 
-[FFMPEG]
-# sadly, nothing here.
+# not working
+[Pyglet]
+Hide = false
+
+
+# not working
+[CV2]
+Hide = false
 
 [Other]
 ReloadPrograms = day
