--- a/config.conf
+++ b/config.conf
@@ -10,10 +10,19 @@ PlanningSystem = GoogleCalendar
 # For now there is only one program loader. 
 ProgramLoader = classic
 # VLC is very buggy and not fully implemented.
-Player = Pyglet
+# We advise to choose Mplayer
+Player = Mplayer
 # In space, nobody can hear you scream.
 # In the future a mail would be send if you got trouble / a discord bot message. Not in the near future sorry lol
 OnTrouble = None
+
+
+# The Log level.
+# select witch messages you want the console to show.
+# type "ALL" tyo see them all (unrecommended)
+# place nothing to default
+# choose bettwin this list: INFO,ERROR,WARNING,DEBUG,TEST
+LogLevel = ALL
 
 [ProgramLoader]
 # path to the folder containing all the programs
@@ -38,9 +47,21 @@ Client_flow_pickle_file = core/planning/google_flow.pickle
 
 
 [VLC]
-# If you choose the VLC Streaming service (the only one working) but a big buggy
+# If you choose the VLC Streaming service (not recommended) and a big buggy
 Hide = false
 
+[VLCserver]
+Path = C:\Program Files\VideoLAN\VLC\VLC.exe
+Hide = False
+Port = 8081
+Host = localhost
+Pass = 1234
+CmdOptions =
+
+[Mplayer]
+# The recommended service
+# Path is the path to the mplayer executable
+Path = extern/mplayer/mplayer.exe
 
 # not working
 [Pyglet]
